# src/shared/api/green-api.openapi.json
@@ -394,9 +394,14 @@
                     },
                     "chatId": {
                       "type": "string"
+                    },
+                    "status": {
+                      "type": "boolean"
+                    },
+                    "reason": {
+                      "type": "string"
                     }
-                  },
-                  "required": ["exist", "chatId"]
+                  }
                 }
               }
             }
@@ -500,6 +505,12 @@
       "ApiError": {
         "type": "object",
         "properties": {
+          "status": {
+            "type": "boolean"
+          },
+          "reason": {
+            "type": "string"
+          },
           "statusCode": {
             "type": "number"
           },
@@ -512,8 +523,7 @@
           "message": {
             "type": "string"
           }
-        },
-        "required": ["message"]
+        }
       },
       "SendMessageRequest": {
         "type": "object",
